<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vadym.testtasknorthstudio.activities.AddElementActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/timeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <Button
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text"/>

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
