<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_time"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/messageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>